--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
   ],
   "dependencies": {
     "async": "^1.2.1",
-    "ligle-util": "~0.3.0",
     "mongodb": "^2.0.35",
     "moment": "^2.10.3"
   },
+  "peerDependencies": {
+    "ligle-util": "~0.3.1",
+    "ligle-db": "~0.3.2"
+  },
   "devDependencies": {
-    "ligle-db": "~0.3.0",
     "chai": "^3.0.0"
   },
   "readme": "README.md",
