--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "ligle-model",
   "version": "0.3.2",
   "description": "model",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
-    "test": "mocha test.js"
+    "test": "grunt test"
   },
   "repository": {
     "type": "git",
@@ -19,13 +19,31 @@
     "moment": "^2.10.3"
   },
   "peerDependencies": {
-    "ligle-util": "~0.3.1",
-    "ligle-db": "~0.3.2"
+    "ligle-util": "~0.4.0",
+    "ligle-db": "~0.4.0"
   },
   "devDependencies": {
-    "chai": "^3.0.0"
+    "chai": "^3.0.0",
+    "grunt": "^0.4.5",
+    "grunt-bump": "^0.6.0",
+    "grunt-changelog": "^0.3.1",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-copy": "^0.8.1",
+    "grunt-contrib-jshint": "^0.11.3",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-env": "^0.4.4",
+    "grunt-git": "^0.3.5",
+    "grunt-istanbul": "^0.6.1",
+    "grunt-jscs": "^2.1.0",
+    "grunt-mocha-test": "^0.12.7",
+    "istanbul": "^0.3.22",
+    "semver": "^5.0.3",
+    "mocha": "^2.3.2"
   },
-  "readme": "README.md",
   "author": "crackhopper",
-  "license": "ligle"
+  "license": "ligle",
+  "directories": {
+    "test": "test"
+  }
 }
