fixes #1 修复数据库导致单元测试失败的问题。

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+services:
+  - mongodb
+
 language: node_js
 node_js:
   - "0.12"
@@ -6,6 +9,10 @@ before_install: npm install -g grunt-cli
 
 install:
  - npm install
+
+# .travis.yml
+before_script:
+  - sleep 15
 
 branches:
   only:
